# Transformer-From-Scratch

./: .gitignore  README.md  Results..md  config.ini  helper_functions.py  interface.py  json_to_txt.py  pyproject.toml  results.md  small_data_config.ini  test_transformer.py  transformer.ipynb  transformer.py  transformer_test.py
.github/workflows/: tests.yml
data/: pres_data.txt  test_data.txt
