[project]
name = "Transformer"
version = "0.0.1"
description = "Transformer based language model built from scratch"
authors = [
	{ name = "Evan Economou", email = "eteconomou@gmail.com" },
	{ name = "Joe Huston", email = "josephhuston47@Outlook.com"},
	{ name = "Nathan Hoehndorf", email = "hoehndorf.nathan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"


dependencies = [
	"torch",
	"dataclasses",
	"torch.nn",
	"jaxtyping",
	"unicodedata",
	"collections",
	"matplotlib",
	"configparser",
	"requests",
	"pathlib",
	"pytest",
]
